@@ -17,13 +17,7 @@ logger - GPLv3 - The RainbruRPG's stream-oriented multi-output logging
    Please update version and revision in configure.in
 
 * v0.0.0-8 (14 mar 2012 - ???) SLOC ??? FT ??:??
+- (3) Avoid name conflixt with bsdutils' logger by prefixing filename
+   manual page, texinfo, logger.spec.in file
+- Move some ./configure.in checks to the m4/ directory
 - Found some translatable files
-
-* v0.0.0-7 (07 jan 2012 - 14 mar 2012) SLOC 1,131 FT 21:40
-- Now using gettext for i18n
-- Integrates Boost.Format in configure and DEPENDENCIES
-- Removed some po/ files from SVN
-- Add gettext support
-- Improved project setup
-   svn repo cleanup, DEPENDENCIES file
-- Removed autoproject generated files
